# michilante_user_api_service

./: Cargo.toml  Dockerfile  user_endpoint.txt
docker_compose/: docker-compose.yml
src/: main.rs
src/layers/: mod.rs
src/layers/business/: mod.rs
src/layers/business/shared/: business_rules.rs  errors.rs  mod.rs
src/layers/business/shared/sanitization_rules/: mod.rs  strings.rs
src/layers/business/shared/validation_rules/: mod.rs  rtsp_url.rs  strings.rs
src/layers/business/usecases/: mod.rs
src/layers/business/usecases/create_camera/: mod.rs  sanitization_rules.rs
src/layers/business/usecases/create_camera_temp_blocking/: implementation.rs  interface.rs
src/layers/business/usecases/delete_camera/: implementation.rs  interface.rs  mod.rs  sanitization_rules.rs
src/layers/business/usecases/delete_camera_temp_blocking/: implementation.rs  interface.rs
src/layers/business/usecases/get_camera_stream_url/: implementation.rs  interface.rs  sanitization_rules.rs
src/layers/business/usecases/list_blockable_users_for_camera/: interface.rs  (+1 more)
src/layers/ewi/: appstate.rs  error.rs  mod.rs  openapi.rs  setup.rs
src/layers/ewi/appstate/: auth0.rs  mod.rs
src/layers/ewi/endpoints/: cameras.rs  camerasv2.rs  mod.rs  users.rs
src/layers/ewi/middleware/: auth0.rs
src/layers/ewi/providers/: camera_qc_collection.rs  camera_temp_blocking_qc_collection.rs  mod.rs  permanent_stream_server.rs  temporary_stream_server.rs  user_qc_collection.rs
src/layers/ewm/: mod.rs
src/layers/ewm/main_database/: mod.rs
src/layers/ewm/permanent_stream_server/: mod.rs
src/layers/ewm/temporary_stream_server/: mod.rs
(+22 files in other folders)
