[package]
name = "user_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.76.0"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
ulid = "1.2.1"
