[package]
name = "user_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.76.0"
axum = "0.8.3"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
jwtk = "0.4.0"
reqwest = { version = "0.12.16", features = ["json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors" ]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.2.1"
url = "2.5.4"
